--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
+        dataBinding {
+            enabled = true
+        }
     }
     buildTypes {
         release {
@@ -34,11 +38,18 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
+    // Firebase Authentication
+    implementation 'com.firebaseui:firebase-ui-auth:4.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.0.0'
+
     // Firebase
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
     implementation 'com.google.firebase:firebase-firestore:21.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.1'
+
+
+    // Firestore
+    implementation 'com.google.firebase:firebase-firestore:19.0.0'
 
     // ViewModel and LiveData
     def lifecycle_version = "2.2.0-alpha03"
@@ -65,7 +76,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui:$nav_version"
 
     // Image
-    implementation ("com.github.bumptech.glide:glide:4.9.0") {
+    implementation("com.github.bumptech.glide:glide:4.9.0") {
         exclude group: "com.android.support"
     }
 
