--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,10 +46,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics:17.0.1'
     implementation 'com.google.firebase:firebase-firestore:21.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.1'
-
-
-    // Firestore
-    implementation 'com.google.firebase:firebase-firestore:19.0.0'
+    // FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:6.0.2'
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:6.0.2'
 
     // ViewModel and LiveData
     def lifecycle_version = "2.2.0-alpha03"
