--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     // Cloud Messaging
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
 
+    // Location Services
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
 
     // ViewModel and LiveData
     def lifecycle_version = "2.2.0-alpha03"
