--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,9 +17,9 @@ android {
             }
         }
 
-        dataBinding {
-            enabled = true
-        }
+//        dataBinding {
+//            enabled = true
+//        }
     }
     buildTypes {
         release {
@@ -27,69 +27,70 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dependencies {
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'androidx.appcompat:appcompat:1.1.0'
+        implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+        implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+        testImplementation 'junit:junit:4.12'
+        androidTestImplementation 'androidx.test:runner:1.1.1'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+
+        // Firebase Authentication
+        implementation 'com.firebaseui:firebase-ui-auth:4.3.0'
+        implementation 'com.google.firebase:firebase-auth:19.1.0'
+
+        // Firebase
+        implementation 'com.google.firebase:firebase-core:17.2.0'
+        implementation 'com.google.firebase:firebase-analytics:17.2.0'
+        implementation 'com.google.firebase:firebase-firestore:21.1.1'
+        // FirebaseUI for Cloud Firestore
+        implementation 'com.firebaseui:firebase-ui-firestore:6.0.2'
+        // FirebaseUI for Firebase Realtime Database
+        implementation 'com.firebaseui:firebase-ui-database:6.0.2'
+
+
+        // Cloud Messaging
+        implementation 'com.google.firebase:firebase-messaging:20.0.0'
+
+        // Location Services
+        implementation 'com.google.android.gms:play-services-location:17.0.0'
+
+        // ViewModel and LiveData
+        def lifecycle_version = "2.2.0-alpha03"
+        implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
+        implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
+        annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+        // Saved state module
+        implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha03"
+
+        // Room components
+        def room_version = "2.2.0-rc01"
+        implementation "androidx.room:room-runtime:$room_version"
+        annotationProcessor "androidx.room:room-compiler:$room_version"
+        androidTestImplementation "androidx.room:room-testing:$room_version"
+
+        // RecyclerView and CardView
+        def material_version = "1.0.0"
+        implementation "com.google.android.material:material:$material_version"
+
+        // Navigation
+        def nav_version = "2.1.0"
+        implementation "androidx.navigation:navigation-fragment:$nav_version"
+        implementation "androidx.navigation:navigation-ui:$nav_version"
+
+        // Image
+        implementation("com.github.bumptech.glide:glide:4.9.0") {
+            exclude group: "com.android.support"
+        }
+        annotationProcessor 'androidx.annotation:annotation:1.1.0'
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+        implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
+            transitive = true
+        }
+
+    }
 }
 
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
-    // Firebase Authentication
-    implementation 'com.firebaseui:firebase-ui-auth:4.3.0'
-    implementation 'com.google.firebase:firebase-auth:19.0.0'
-
-    // Firebase
-    implementation 'com.google.firebase:firebase-analytics:17.2.0'
-    implementation 'com.google.firebase:firebase-firestore:21.0.0'
-    implementation 'com.google.firebase:firebase-core:17.0.1'
-    // FirebaseUI for Firebase Realtime Database
-    implementation 'com.firebaseui:firebase-ui-database:6.0.2'
-    // FirebaseUI for Cloud Firestore
-    implementation 'com.firebaseui:firebase-ui-firestore:6.0.2'
-
-    // Cloud Messaging
-    implementation 'com.google.firebase:firebase-messaging:20.0.0'
-
-    // Location Services
-    implementation 'com.google.android.gms:play-services-location:17.0.0'
-
-    // ViewModel and LiveData
-    def lifecycle_version = "2.2.0-alpha03"
-    implementation "androidx.lifecycle:lifecycle-reactivestreams:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
-    annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
-    // Saved state module
-    implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha03"
-
-    // Room components
-    def room_version = "2.2.0-rc01"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-    androidTestImplementation "androidx.room:room-testing:$room_version"
-
-    // RecyclerView and CardView
-    def material_version = "1.0.0"
-    implementation "com.google.android.material:material:$material_version"
-
-    // Navigation
-    def nav_version = "2.1.0"
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
-
-    // Image
-    implementation("com.github.bumptech.glide:glide:4.9.0") {
-        exclude group: "com.android.support"
-    }
-    annotationProcessor 'androidx.annotation:annotation:1.0.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
-    implementation ("com.github.bumptech.glide:glide:4.9.0@aar") {
-        transitive = true
-    }
-
-}
 
 apply plugin: 'com.google.gms.google-services'
