--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,9 @@ android {
 
 //        implementation 'com.android.volley:volley:1.1.1'
 
+        // Storage
+        implementation 'com.google.firebase:firebase-storage:19.1.0'
+
 
     }
 }
