todo: unread per user

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,12 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"
+            android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-
             </intent-filter>
         </activity>
 
@@ -37,8 +37,8 @@
         <activity android:name=".MainActivity">
             <intent-filter>
 <!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-                <category android:name="android.intent.action.GET_CONTENT" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.action.GET_CONTENT" /> <!-- pic -->
             </intent-filter>
         </activity>
     </application>
