--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         </activity>
 
         <service
-            android:name=".notifications.FirebaseMessaging"
+            android:name=".repository.notifications.FirebaseMessaging"
             android:enabled="true"
             android:exported="true"
             android:permission="false">
