--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,19 +7,16 @@ android {
         applicationId "postpc.studypartner2"
         minSdkVersion 26
         targetSdkVersion 29
-        versionCode 1
+        versionCode 4
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
-            }
-        }
-
-//        dataBinding {
-//            enabled = true
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
+//            }
 //        }
+
     }
     buildTypes {
         release {
@@ -65,12 +62,12 @@ android {
         annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
         // Saved state module
         implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha03"
-
-        // Room components
-        def room_version = "2.2.0"
-        implementation "androidx.room:room-runtime:$room_version"
-        annotationProcessor "androidx.room:room-compiler:$room_version"
-        androidTestImplementation "androidx.room:room-testing:$room_version"
+//
+//        // Room components
+//        def room_version = "2.2.0"
+//        implementation "androidx.room:room-runtime:$room_version"
+//        annotationProcessor "androidx.room:room-compiler:$room_version"
+//        androidTestImplementation "androidx.room:room-testing:$room_version"
 
         // RecyclerView and CardView
         def material_version = "1.0.0"
@@ -90,8 +87,6 @@ android {
         implementation("com.github.bumptech.glide:glide:4.9.0@aar") {
             transitive = true
         }
-
-//        implementation 'com.android.volley:volley:1.1.1'
 
         // Storage
         implementation 'com.google.firebase:firebase-storage:19.1.0'
